infrastructure/storage/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  annotations:
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # prevent the controller from redirecting (308) to HTTPS
    ingress.kubernetes.io/ssl-redirect: 'false'
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: longhorn-basic-auth
spec:
  rules:
  - host: "longhorn.kubepi"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
